# humanoid-physical-ai-book_backend

./: .env  .env.example  .env.production  =3.0.0  README.md  alembic.ini  db_manager.py  debug_chat_flow.py  debug_embedding.py  humanoid_ai_book.db  humanoid_ai_book_new.db  init_db.py  main.py  pyproject.toml  qdrant_troubleshoot.py  quick_check.py  requirements.txt  test_agent.py  test_chat.py  test_chat_fix.py  test_cohere.py  test_database_fix.py  test_full_rag.py  test_llm_service.py  test_query_method.py  test_retrieval.py  upload_checkpoint.json
alembic/: env.py
scripts/: add_missing_columns.py  check_upload_status.py  ingest_content.py  ingest_sample_content.py  init_db.py  populate_db.py  process_docs_to_qdrant.py  process_docs_to_qdrant_resumable.py  rag_tester.py  run_agent_test.bat  run_api_test.bat  setup_qdrant.py  simple_test_api.py  test_agent.py  test_api.py  test_chat_endpoint.py  test_qdrant.py  test_rag_fallback.py  test_upload.py
src/: database.py  main.py
src/api/: auth.py  better_auth.py  chat.py  chat.py.bak  content.py  exercise.py  health.py  personalization.py  progress.py  search.py  translation.py  user.py
src/models/: __init__.py  assessment_project.py  chat_conversation.py  chat_message.py  chat_session.py  content_chunk.py  course_module.py  exercise.py  hardware_requirement.py  personalized_content.py  search_results.py  student_progress.py  translation_cache.py  translation_dictionary.py  user.py  user.py.tmp.10944.1765312328329  user_preferences.py  weekly_content.py
src/services/: agent.py  auth_service.py  llm_service.py  (+6 more)
