[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastembed>=0.3.1",
    "python-dotenv>=0.9.9",
    "markdown>=3.10",
    "psycopg2-binary>=2.9.11",
    "qdrant-client>=1.16.1",
    "trafilatura>=2.0.0",
    "fastapi>=0.124.4",
    "openai>=2.11.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "beautifulsoup4>=4.12.2",
    "sentence-transformers>=3.0.0",
    "cohere>=4.0",
    "email-validator>=2.0.0",
    "better-auth==0.0.1b11",
]
